auth routes doc
