# app/Virtual/Resources/UserResource.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Virtual\Resources;
+
+/**
+ * @OA\Schema(
+ *     title="UserResource",
+ *     description="User resource",
+ *     @OA\Xml(
+ *         name="UserResource"
+ *     )
+ * )
+ */
+class UserResource
+{
+    /**
+     * @OA\Property(
+     *     title="State",
+     *     description="State",
+     *     example=true
+     * )
+     *
+     * @var boolean
+     */
+    private $state;
+
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data"
+     * )
+     *
+     * @var \App\Virtual\Models\User
+     */
+    private $data;
+}
